# ai_webscraper

./: .gitignore  README.md  justfile  pyproject.toml  test.py
crawlers/: request_crawler.py
utils/: bs4.py  miscellaneous.py
