[project]
name = "opscout-data-pipeline"
version = "0.1.0"
description = "The data pipeline powering OpScout, the funding opportunity matchmaker" 
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "entity-fuser>=0.5.8",
    "google-genai>=1.21.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "lucerank>=1.0.0",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "openai>=1.90.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pandas-gbq>=0.29.1",
    "pickleshare>=0.7.5",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic==2.10.6",
    "pydantic-ai>=0.3.2",
    "pypdf>=5.7.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "tenacity>=8.5.0",
    "tldextract>=5.3.0",
    "tqdm>=4.67.1",
]
